// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration swift ios-swift/class.swift should match snapshot 1`] = `
"
//
// style_dictionary.swift
//

// Do not edit directly
// Generated on Sat, 01 Jan 2000 00:00:00 GMT


import UIKit

public class StyleDictionary {
    public static let colorBackgroundDanger = UIColor(red: 1.000, green: 0.918, blue: 0.914, alpha: 1)
    public static let colorBackgroundDisabled = UIColor(red: 0.871, green: 0.882, blue: 0.882, alpha: 1)
    public static let colorBackgroundInfo = UIColor(red: 0.914, green: 0.973, blue: 1.000, alpha: 1)
    public static let colorBackgroundPrimary = UIColor(red: 1.000, green: 1.000, blue: 1.000, alpha: 1)
    public static let colorBackgroundSecondary = UIColor(red: 0.953, green: 0.957, blue: 0.957, alpha: 1)
    public static let colorBackgroundSuccess = UIColor(red: 0.922, green: 0.976, blue: 0.922, alpha: 1)
    public static let colorBackgroundTertiary = UIColor(red: 0.871, green: 0.882, blue: 0.882, alpha: 1)
    public static let colorBackgroundWarning = UIColor(red: 1.000, green: 0.929, blue: 0.890, alpha: 1)
    public static let colorBorderPrimary = UIColor(red: 0.784, green: 0.800, blue: 0.800, alpha: 1)
    public static let colorBrandPrimary = UIColor(red: 0.043, green: 0.522, blue: 0.600, alpha: 1)
    public static let colorBrandSecondary = UIColor(red: 0.435, green: 0.369, blue: 0.827, alpha: 1)
    public static let colorCoreAqua0 = UIColor(red: 0.851, green: 0.988, blue: 0.984, alpha: 1)
    public static let colorCoreAqua100 = UIColor(red: 0.773, green: 0.976, blue: 0.976, alpha: 1)
    public static let colorCoreAqua1000 = UIColor(red: 0.031, green: 0.239, blue: 0.310, alpha: 1)
    public static let colorCoreAqua1100 = UIColor(red: 0.000, green: 0.157, blue: 0.220, alpha: 1)
    public static let colorCoreAqua200 = UIColor(red: 0.647, green: 0.949, blue: 0.949, alpha: 1)
    public static let colorCoreAqua300 = UIColor(red: 0.463, green: 0.898, blue: 0.886, alpha: 1)
    public static let colorCoreAqua400 = UIColor(red: 0.200, green: 0.839, blue: 0.886, alpha: 1)
    public static let colorCoreAqua500 = UIColor(red: 0.090, green: 0.722, blue: 0.808, alpha: 1)
    public static let colorCoreAqua600 = UIColor(red: 0.027, green: 0.592, blue: 0.682, alpha: 1)
    public static let colorCoreAqua700 = UIColor(red: 0.043, green: 0.522, blue: 0.600, alpha: 1)
    public static let colorCoreAqua800 = UIColor(red: 0.059, green: 0.431, blue: 0.518, alpha: 1)
    public static let colorCoreAqua900 = UIColor(red: 0.012, green: 0.369, blue: 0.451, alpha: 1)
    public static let colorCoreBlue0 = UIColor(red: 0.914, green: 0.973, blue: 1.000, alpha: 1)
    public static let colorCoreBlue100 = UIColor(red: 0.863, green: 0.949, blue: 1.000, alpha: 1)
    public static let colorCoreBlue1000 = UIColor(red: 0.039, green: 0.224, blue: 0.376, alpha: 1)
    public static let colorCoreBlue1100 = UIColor(red: 0.000, green: 0.129, blue: 0.220, alpha: 1)
    public static let colorCoreBlue200 = UIColor(red: 0.780, green: 0.894, blue: 0.976, alpha: 1)
    public static let colorCoreBlue300 = UIColor(red: 0.631, green: 0.824, blue: 0.973, alpha: 1)
    public static let colorCoreBlue400 = UIColor(red: 0.337, green: 0.678, blue: 0.961, alpha: 1)
    public static let colorCoreBlue500 = UIColor(red: 0.220, green: 0.588, blue: 0.890, alpha: 1)
    public static let colorCoreBlue600 = UIColor(red: 0.169, green: 0.529, blue: 0.827, alpha: 1)
    public static let colorCoreBlue700 = UIColor(red: 0.125, green: 0.475, blue: 0.765, alpha: 1)
    public static let colorCoreBlue800 = UIColor(red: 0.067, green: 0.427, blue: 0.667, alpha: 1)
    public static let colorCoreBlue900 = UIColor(red: 0.047, green: 0.337, blue: 0.537, alpha: 1)
    public static let colorCoreGreen0 = UIColor(red: 0.922, green: 0.976, blue: 0.922, alpha: 1)
    public static let colorCoreGreen100 = UIColor(red: 0.843, green: 0.957, blue: 0.843, alpha: 1)
    public static let colorCoreGreen1000 = UIColor(red: 0.031, green: 0.259, blue: 0.184, alpha: 1)
    public static let colorCoreGreen1100 = UIColor(red: 0.000, green: 0.169, blue: 0.125, alpha: 1)
    public static let colorCoreGreen200 = UIColor(red: 0.761, green: 0.949, blue: 0.741, alpha: 1)
    public static let colorCoreGreen300 = UIColor(red: 0.596, green: 0.898, blue: 0.557, alpha: 1)
    public static let colorCoreGreen400 = UIColor(red: 0.459, green: 0.867, blue: 0.400, alpha: 1)
    public static let colorCoreGreen500 = UIColor(red: 0.349, green: 0.796, blue: 0.349, alpha: 1)
    public static let colorCoreGreen600 = UIColor(red: 0.169, green: 0.714, blue: 0.337, alpha: 1)
    public static let colorCoreGreen700 = UIColor(red: 0.047, green: 0.655, blue: 0.314, alpha: 1)
    public static let colorCoreGreen800 = UIColor(red: 0.000, green: 0.545, blue: 0.275, alpha: 1)
    public static let colorCoreGreen900 = UIColor(red: 0.000, green: 0.420, blue: 0.251, alpha: 1)
    public static let colorCoreMagenta0 = UIColor(red: 0.996, green: 0.941, blue: 1.000, alpha: 1)
    public static let colorCoreMagenta100 = UIColor(red: 0.976, green: 0.890, blue: 0.988, alpha: 1)
    public static let colorCoreMagenta1000 = UIColor(red: 0.271, green: 0.082, blue: 0.318, alpha: 1)
    public static let colorCoreMagenta1100 = UIColor(red: 0.161, green: 0.098, blue: 0.176, alpha: 1)
    public static let colorCoreMagenta200 = UIColor(red: 0.957, green: 0.769, blue: 0.969, alpha: 1)
    public static let colorCoreMagenta300 = UIColor(red: 0.929, green: 0.678, blue: 0.949, alpha: 1)
    public static let colorCoreMagenta400 = UIColor(red: 0.949, green: 0.510, blue: 0.961, alpha: 1)
    public static let colorCoreMagenta500 = UIColor(red: 0.859, green: 0.380, blue: 0.859, alpha: 1)
    public static let colorCoreMagenta600 = UIColor(red: 0.769, green: 0.306, blue: 0.725, alpha: 1)
    public static let colorCoreMagenta700 = UIColor(red: 0.675, green: 0.267, blue: 0.659, alpha: 1)
    public static let colorCoreMagenta800 = UIColor(red: 0.561, green: 0.220, blue: 0.588, alpha: 1)
    public static let colorCoreMagenta900 = UIColor(red: 0.424, green: 0.133, blue: 0.467, alpha: 1)
    public static let colorCoreNeutral0 = UIColor(red: 1.000, green: 1.000, blue: 1.000, alpha: 1)
    public static let colorCoreNeutral100 = UIColor(red: 0.953, green: 0.957, blue: 0.957, alpha: 1)
    public static let colorCoreNeutral1000 = UIColor(red: 0.086, green: 0.125, blue: 0.125, alpha: 1)
    public static let colorCoreNeutral1100 = UIColor(red: 0.016, green: 0.016, blue: 0.016, alpha: 1)
    public static let colorCoreNeutral200 = UIColor(red: 0.871, green: 0.882, blue: 0.882, alpha: 1)
    public static let colorCoreNeutral300 = UIColor(red: 0.784, green: 0.800, blue: 0.800, alpha: 1)
    public static let colorCoreNeutral400 = UIColor(red: 0.690, green: 0.714, blue: 0.718, alpha: 1)
    public static let colorCoreNeutral500 = UIColor(red: 0.573, green: 0.604, blue: 0.608, alpha: 1)
    public static let colorCoreNeutral600 = UIColor(red: 0.431, green: 0.475, blue: 0.478, alpha: 1)
    public static let colorCoreNeutral700 = UIColor(red: 0.318, green: 0.369, blue: 0.373, alpha: 1)
    public static let colorCoreNeutral800 = UIColor(red: 0.212, green: 0.255, blue: 0.255, alpha: 1)
    public static let colorCoreNeutral900 = UIColor(red: 0.153, green: 0.200, blue: 0.200, alpha: 1)
    public static let colorCoreOrange0 = UIColor(red: 1.000, green: 0.929, blue: 0.890, alpha: 1)
    public static let colorCoreOrange100 = UIColor(red: 0.988, green: 0.863, blue: 0.800, alpha: 1)
    public static let colorCoreOrange1000 = UIColor(red: 0.376, green: 0.090, blue: 0.000, alpha: 1)
    public static let colorCoreOrange1100 = UIColor(red: 0.176, green: 0.075, blue: 0.055, alpha: 1)
    public static let colorCoreOrange200 = UIColor(red: 1.000, green: 0.776, blue: 0.643, alpha: 1)
    public static let colorCoreOrange300 = UIColor(red: 1.000, green: 0.694, blue: 0.502, alpha: 1)
    public static let colorCoreOrange400 = UIColor(red: 1.000, green: 0.612, blue: 0.365, alpha: 1)
    public static let colorCoreOrange500 = UIColor(red: 0.988, green: 0.537, blue: 0.263, alpha: 1)
    public static let colorCoreOrange600 = UIColor(red: 0.961, green: 0.490, blue: 0.200, alpha: 1)
    public static let colorCoreOrange700 = UIColor(red: 0.929, green: 0.439, blue: 0.141, alpha: 1)
    public static let colorCoreOrange800 = UIColor(red: 0.808, green: 0.333, blue: 0.067, alpha: 1)
    public static let colorCoreOrange900 = UIColor(red: 0.588, green: 0.173, blue: 0.043, alpha: 1)
    public static let colorCorePink0 = UIColor(red: 1.000, green: 0.914, blue: 0.953, alpha: 1)
    public static let colorCorePink100 = UIColor(red: 0.988, green: 0.859, blue: 0.922, alpha: 1)
    public static let colorCorePink1000 = UIColor(red: 0.337, green: 0.071, blue: 0.192, alpha: 1)
    public static let colorCorePink1100 = UIColor(red: 0.169, green: 0.090, blue: 0.129, alpha: 1)
    public static let colorCorePink200 = UIColor(red: 1.000, green: 0.710, blue: 0.835, alpha: 1)
    public static let colorCorePink300 = UIColor(red: 1.000, green: 0.584, blue: 0.757, alpha: 1)
    public static let colorCorePink400 = UIColor(red: 1.000, green: 0.463, blue: 0.682, alpha: 1)
    public static let colorCorePink500 = UIColor(red: 0.937, green: 0.345, blue: 0.545, alpha: 1)
    public static let colorCorePink600 = UIColor(red: 0.878, green: 0.267, blue: 0.486, alpha: 1)
    public static let colorCorePink700 = UIColor(red: 0.808, green: 0.212, blue: 0.396, alpha: 1)
    public static let colorCorePink800 = UIColor(red: 0.698, green: 0.184, blue: 0.357, alpha: 1)
    public static let colorCorePink900 = UIColor(red: 0.576, green: 0.094, blue: 0.278, alpha: 1)
    public static let colorCorePurple0 = UIColor(red: 0.949, green: 0.949, blue: 0.976, alpha: 1)
    public static let colorCorePurple100 = UIColor(red: 0.918, green: 0.918, blue: 0.976, alpha: 1)
    public static let colorCorePurple1000 = UIColor(red: 0.176, green: 0.141, blue: 0.420, alpha: 1)
    public static let colorCorePurple1100 = UIColor(red: 0.114, green: 0.114, blue: 0.220, alpha: 1)
    public static let colorCorePurple200 = UIColor(red: 0.847, green: 0.843, blue: 0.976, alpha: 1)
    public static let colorCorePurple300 = UIColor(red: 0.757, green: 0.757, blue: 0.969, alpha: 1)
    public static let colorCorePurple400 = UIColor(red: 0.631, green: 0.576, blue: 0.949, alpha: 1)
    public static let colorCorePurple500 = UIColor(red: 0.569, green: 0.502, blue: 0.957, alpha: 1)
    public static let colorCorePurple600 = UIColor(red: 0.506, green: 0.435, blue: 0.918, alpha: 1)
    public static let colorCorePurple700 = UIColor(red: 0.435, green: 0.369, blue: 0.827, alpha: 1)
    public static let colorCorePurple800 = UIColor(red: 0.369, green: 0.306, blue: 0.729, alpha: 1)
    public static let colorCorePurple900 = UIColor(red: 0.282, green: 0.227, blue: 0.612, alpha: 1)
    public static let colorCoreRed0 = UIColor(red: 1.000, green: 0.918, blue: 0.914, alpha: 1)
    public static let colorCoreRed100 = UIColor(red: 1.000, green: 0.835, blue: 0.824, alpha: 1)
    public static let colorCoreRed1000 = UIColor(red: 0.427, green: 0.075, blue: 0.075, alpha: 1)
    public static let colorCoreRed1100 = UIColor(red: 0.169, green: 0.067, blue: 0.067, alpha: 1)
    public static let colorCoreRed200 = UIColor(red: 1.000, green: 0.722, blue: 0.694, alpha: 1)
    public static let colorCoreRed300 = UIColor(red: 1.000, green: 0.612, blue: 0.561, alpha: 1)
    public static let colorCoreRed400 = UIColor(red: 1.000, green: 0.498, blue: 0.431, alpha: 1)
    public static let colorCoreRed500 = UIColor(red: 0.969, green: 0.376, blue: 0.329, alpha: 1)
    public static let colorCoreRed600 = UIColor(red: 0.929, green: 0.298, blue: 0.259, alpha: 1)
    public static let colorCoreRed700 = UIColor(red: 0.859, green: 0.243, blue: 0.243, alpha: 1)
    public static let colorCoreRed800 = UIColor(red: 0.776, green: 0.204, blue: 0.204, alpha: 1)
    public static let colorCoreRed900 = UIColor(red: 0.600, green: 0.133, blue: 0.133, alpha: 1)
    public static let colorCoreTeal0 = UIColor(red: 0.898, green: 0.976, blue: 0.961, alpha: 1)
    public static let colorCoreTeal100 = UIColor(red: 0.804, green: 0.969, blue: 0.937, alpha: 1)
    public static let colorCoreTeal1000 = UIColor(red: 0.031, green: 0.247, blue: 0.247, alpha: 1)
    public static let colorCoreTeal1100 = UIColor(red: 0.000, green: 0.145, blue: 0.157, alpha: 1)
    public static let colorCoreTeal200 = UIColor(red: 0.702, green: 0.949, blue: 0.902, alpha: 1)
    public static let colorCoreTeal300 = UIColor(red: 0.490, green: 0.918, blue: 0.835, alpha: 1)
    public static let colorCoreTeal400 = UIColor(red: 0.141, green: 0.878, blue: 0.773, alpha: 1)
    public static let colorCoreTeal500 = UIColor(red: 0.031, green: 0.769, blue: 0.698, alpha: 1)
    public static let colorCoreTeal600 = UIColor(red: 0.000, green: 0.663, blue: 0.612, alpha: 1)
    public static let colorCoreTeal700 = UIColor(red: 0.043, green: 0.588, blue: 0.561, alpha: 1)
    public static let colorCoreTeal800 = UIColor(red: 0.024, green: 0.486, blue: 0.486, alpha: 1)
    public static let colorCoreTeal900 = UIColor(red: 0.008, green: 0.400, blue: 0.380, alpha: 1)
    public static let colorCoreYellow0 = UIColor(red: 1.000, green: 0.973, blue: 0.886, alpha: 1)
    public static let colorCoreYellow100 = UIColor(red: 0.992, green: 0.937, blue: 0.804, alpha: 1)
    public static let colorCoreYellow1000 = UIColor(red: 0.329, green: 0.165, blue: 0.000, alpha: 1)
    public static let colorCoreYellow1100 = UIColor(red: 0.176, green: 0.102, blue: 0.020, alpha: 1)
    public static let colorCoreYellow200 = UIColor(red: 1.000, green: 0.914, blue: 0.604, alpha: 1)
    public static let colorCoreYellow300 = UIColor(red: 1.000, green: 0.882, blue: 0.431, alpha: 1)
    public static let colorCoreYellow400 = UIColor(red: 1.000, green: 0.851, blue: 0.263, alpha: 1)
    public static let colorCoreYellow500 = UIColor(red: 1.000, green: 0.804, blue: 0.110, alpha: 1)
    public static let colorCoreYellow600 = UIColor(red: 1.000, green: 0.737, blue: 0.000, alpha: 1)
    public static let colorCoreYellow700 = UIColor(red: 0.867, green: 0.600, blue: 0.012, alpha: 1)
    public static let colorCoreYellow800 = UIColor(red: 0.729, green: 0.459, blue: 0.024, alpha: 1)
    public static let colorCoreYellow900 = UIColor(red: 0.580, green: 0.298, blue: 0.047, alpha: 1)
    public static let colorFontDanger = UIColor(red: 0.427, green: 0.075, blue: 0.075, alpha: 1)
    public static let colorFontInteractive = UIColor(red: 0.043, green: 0.522, blue: 0.600, alpha: 1)
    public static let colorFontInteractiveActive = UIColor(red: 0.435, green: 0.369, blue: 0.827, alpha: 1)
    public static let colorFontInteractiveDisabled = UIColor(red: 0.212, green: 0.255, blue: 0.255, alpha: 1)
    public static let colorFontInteractiveHover = UIColor(red: 0.043, green: 0.522, blue: 0.600, alpha: 1)
    public static let colorFontPrimary = UIColor(red: 0.016, green: 0.016, blue: 0.016, alpha: 1)
    public static let colorFontSecondary = UIColor(red: 0.153, green: 0.200, blue: 0.200, alpha: 1)
    public static let colorFontSuccess = UIColor(red: 0.031, green: 0.259, blue: 0.184, alpha: 1)
    public static let colorFontTertiary = UIColor(red: 0.212, green: 0.255, blue: 0.255, alpha: 1)
    public static let colorFontWarning = UIColor(red: 0.376, green: 0.090, blue: 0.000, alpha: 1)
    public static let sizeBorderRadiusLarge = CGFloat(480.00)
    public static let sizeFontLarge = CGFloat(24.00)
    public static let sizeFontMedium = CGFloat(16.00)
    public static let sizeFontSmall = CGFloat(12.00)
    public static let sizeFontXl = CGFloat(36.00)
    public static let sizePaddingLarge = CGFloat(16.00)
    public static let sizePaddingMedium = CGFloat(16.00)
    public static let sizePaddingSmall = CGFloat(8.00)
    public static let sizePaddingXl = CGFloat(16.00)
}
"
`;

exports[`integration swift ios-swift/class.swift with references should match snapshot 1`] = `
"
//
// style_dictionary_with_references.swift
//

// Do not edit directly
// Generated on Sat, 01 Jan 2000 00:00:00 GMT


import UIKit

public class StyleDictionary {
    public static let sizePaddingXl = CGFloat(16.00)
    public static let sizePaddingLarge = CGFloat(16.00)
    public static let sizePaddingMedium = CGFloat(16.00)
    public static let sizePaddingSmall = CGFloat(8.00)
    public static let sizeFontXl = CGFloat(36.00)
    public static let sizeFontLarge = CGFloat(24.00)
    public static let sizeFontMedium = CGFloat(16.00)
    public static let sizeFontSmall = CGFloat(12.00)
    public static let sizeBorderRadiusLarge = CGFloat(480.00)
    public static let colorCoreYellow1100 = UIColor(red: 0.176, green: 0.102, blue: 0.020, alpha: 1)
    public static let colorCoreYellow1000 = UIColor(red: 0.329, green: 0.165, blue: 0.000, alpha: 1)
    public static let colorCoreYellow900 = UIColor(red: 0.580, green: 0.298, blue: 0.047, alpha: 1)
    public static let colorCoreYellow800 = UIColor(red: 0.729, green: 0.459, blue: 0.024, alpha: 1)
    public static let colorCoreYellow700 = UIColor(red: 0.867, green: 0.600, blue: 0.012, alpha: 1)
    public static let colorCoreYellow600 = UIColor(red: 1.000, green: 0.737, blue: 0.000, alpha: 1)
    public static let colorCoreYellow500 = UIColor(red: 1.000, green: 0.804, blue: 0.110, alpha: 1)
    public static let colorCoreYellow400 = UIColor(red: 1.000, green: 0.851, blue: 0.263, alpha: 1)
    public static let colorCoreYellow300 = UIColor(red: 1.000, green: 0.882, blue: 0.431, alpha: 1)
    public static let colorCoreYellow200 = UIColor(red: 1.000, green: 0.914, blue: 0.604, alpha: 1)
    public static let colorCoreYellow100 = UIColor(red: 0.992, green: 0.937, blue: 0.804, alpha: 1)
    public static let colorCoreYellow0 = UIColor(red: 1.000, green: 0.973, blue: 0.886, alpha: 1)
    public static let colorCoreNeutral1100 = UIColor(red: 0.016, green: 0.016, blue: 0.016, alpha: 1)
    public static let colorCoreNeutral1000 = UIColor(red: 0.086, green: 0.125, blue: 0.125, alpha: 1)
    public static let colorCoreNeutral900 = UIColor(red: 0.153, green: 0.200, blue: 0.200, alpha: 1)
    public static let colorCoreNeutral800 = UIColor(red: 0.212, green: 0.255, blue: 0.255, alpha: 1)
    public static let colorCoreNeutral700 = UIColor(red: 0.318, green: 0.369, blue: 0.373, alpha: 1)
    public static let colorCoreNeutral600 = UIColor(red: 0.431, green: 0.475, blue: 0.478, alpha: 1)
    public static let colorCoreNeutral500 = UIColor(red: 0.573, green: 0.604, blue: 0.608, alpha: 1)
    public static let colorCoreNeutral400 = UIColor(red: 0.690, green: 0.714, blue: 0.718, alpha: 1)
    public static let colorCoreNeutral300 = UIColor(red: 0.784, green: 0.800, blue: 0.800, alpha: 1)
    public static let colorCoreNeutral200 = UIColor(red: 0.871, green: 0.882, blue: 0.882, alpha: 1)
    public static let colorCoreNeutral100 = UIColor(red: 0.953, green: 0.957, blue: 0.957, alpha: 1)
    public static let colorCoreNeutral0 = UIColor(red: 1.000, green: 1.000, blue: 1.000, alpha: 1)
    public static let colorCoreOrange1100 = UIColor(red: 0.176, green: 0.075, blue: 0.055, alpha: 1)
    public static let colorCoreOrange1000 = UIColor(red: 0.376, green: 0.090, blue: 0.000, alpha: 1)
    public static let colorCoreOrange900 = UIColor(red: 0.588, green: 0.173, blue: 0.043, alpha: 1)
    public static let colorCoreOrange800 = UIColor(red: 0.808, green: 0.333, blue: 0.067, alpha: 1)
    public static let colorCoreOrange700 = UIColor(red: 0.929, green: 0.439, blue: 0.141, alpha: 1)
    public static let colorCoreOrange600 = UIColor(red: 0.961, green: 0.490, blue: 0.200, alpha: 1)
    public static let colorCoreOrange500 = UIColor(red: 0.988, green: 0.537, blue: 0.263, alpha: 1)
    public static let colorCoreOrange400 = UIColor(red: 1.000, green: 0.612, blue: 0.365, alpha: 1)
    public static let colorCoreOrange300 = UIColor(red: 1.000, green: 0.694, blue: 0.502, alpha: 1)
    public static let colorCoreOrange200 = UIColor(red: 1.000, green: 0.776, blue: 0.643, alpha: 1)
    public static let colorCoreOrange100 = UIColor(red: 0.988, green: 0.863, blue: 0.800, alpha: 1)
    public static let colorCoreOrange0 = UIColor(red: 1.000, green: 0.929, blue: 0.890, alpha: 1)
    public static let colorCoreRed1100 = UIColor(red: 0.169, green: 0.067, blue: 0.067, alpha: 1)
    public static let colorCoreRed1000 = UIColor(red: 0.427, green: 0.075, blue: 0.075, alpha: 1)
    public static let colorCoreRed900 = UIColor(red: 0.600, green: 0.133, blue: 0.133, alpha: 1)
    public static let colorCoreRed800 = UIColor(red: 0.776, green: 0.204, blue: 0.204, alpha: 1)
    public static let colorCoreRed700 = UIColor(red: 0.859, green: 0.243, blue: 0.243, alpha: 1)
    public static let colorCoreRed600 = UIColor(red: 0.929, green: 0.298, blue: 0.259, alpha: 1)
    public static let colorCoreRed500 = UIColor(red: 0.969, green: 0.376, blue: 0.329, alpha: 1)
    public static let colorCoreRed400 = UIColor(red: 1.000, green: 0.498, blue: 0.431, alpha: 1)
    public static let colorCoreRed300 = UIColor(red: 1.000, green: 0.612, blue: 0.561, alpha: 1)
    public static let colorCoreRed200 = UIColor(red: 1.000, green: 0.722, blue: 0.694, alpha: 1)
    public static let colorCoreRed100 = UIColor(red: 1.000, green: 0.835, blue: 0.824, alpha: 1)
    public static let colorCoreRed0 = UIColor(red: 1.000, green: 0.918, blue: 0.914, alpha: 1)
    public static let colorCorePink1100 = UIColor(red: 0.169, green: 0.090, blue: 0.129, alpha: 1)
    public static let colorCorePink1000 = UIColor(red: 0.337, green: 0.071, blue: 0.192, alpha: 1)
    public static let colorCorePink900 = UIColor(red: 0.576, green: 0.094, blue: 0.278, alpha: 1)
    public static let colorCorePink800 = UIColor(red: 0.698, green: 0.184, blue: 0.357, alpha: 1)
    public static let colorCorePink700 = UIColor(red: 0.808, green: 0.212, blue: 0.396, alpha: 1)
    public static let colorCorePink600 = UIColor(red: 0.878, green: 0.267, blue: 0.486, alpha: 1)
    public static let colorCorePink500 = UIColor(red: 0.937, green: 0.345, blue: 0.545, alpha: 1)
    public static let colorCorePink400 = UIColor(red: 1.000, green: 0.463, blue: 0.682, alpha: 1)
    public static let colorCorePink300 = UIColor(red: 1.000, green: 0.584, blue: 0.757, alpha: 1)
    public static let colorCorePink200 = UIColor(red: 1.000, green: 0.710, blue: 0.835, alpha: 1)
    public static let colorCorePink100 = UIColor(red: 0.988, green: 0.859, blue: 0.922, alpha: 1)
    public static let colorCorePink0 = UIColor(red: 1.000, green: 0.914, blue: 0.953, alpha: 1)
    public static let colorCoreMagenta1100 = UIColor(red: 0.161, green: 0.098, blue: 0.176, alpha: 1)
    public static let colorCoreMagenta1000 = UIColor(red: 0.271, green: 0.082, blue: 0.318, alpha: 1)
    public static let colorCoreMagenta900 = UIColor(red: 0.424, green: 0.133, blue: 0.467, alpha: 1)
    public static let colorCoreMagenta800 = UIColor(red: 0.561, green: 0.220, blue: 0.588, alpha: 1)
    public static let colorCoreMagenta700 = UIColor(red: 0.675, green: 0.267, blue: 0.659, alpha: 1)
    public static let colorCoreMagenta600 = UIColor(red: 0.769, green: 0.306, blue: 0.725, alpha: 1)
    public static let colorCoreMagenta500 = UIColor(red: 0.859, green: 0.380, blue: 0.859, alpha: 1)
    public static let colorCoreMagenta400 = UIColor(red: 0.949, green: 0.510, blue: 0.961, alpha: 1)
    public static let colorCoreMagenta300 = UIColor(red: 0.929, green: 0.678, blue: 0.949, alpha: 1)
    public static let colorCoreMagenta200 = UIColor(red: 0.957, green: 0.769, blue: 0.969, alpha: 1)
    public static let colorCoreMagenta100 = UIColor(red: 0.976, green: 0.890, blue: 0.988, alpha: 1)
    public static let colorCoreMagenta0 = UIColor(red: 0.996, green: 0.941, blue: 1.000, alpha: 1)
    public static let colorCorePurple1100 = UIColor(red: 0.114, green: 0.114, blue: 0.220, alpha: 1)
    public static let colorCorePurple1000 = UIColor(red: 0.176, green: 0.141, blue: 0.420, alpha: 1)
    public static let colorCorePurple900 = UIColor(red: 0.282, green: 0.227, blue: 0.612, alpha: 1)
    public static let colorCorePurple800 = UIColor(red: 0.369, green: 0.306, blue: 0.729, alpha: 1)
    public static let colorCorePurple700 = UIColor(red: 0.435, green: 0.369, blue: 0.827, alpha: 1)
    public static let colorCorePurple600 = UIColor(red: 0.506, green: 0.435, blue: 0.918, alpha: 1)
    public static let colorCorePurple500 = UIColor(red: 0.569, green: 0.502, blue: 0.957, alpha: 1)
    public static let colorCorePurple400 = UIColor(red: 0.631, green: 0.576, blue: 0.949, alpha: 1)
    public static let colorCorePurple300 = UIColor(red: 0.757, green: 0.757, blue: 0.969, alpha: 1)
    public static let colorCorePurple200 = UIColor(red: 0.847, green: 0.843, blue: 0.976, alpha: 1)
    public static let colorCorePurple100 = UIColor(red: 0.918, green: 0.918, blue: 0.976, alpha: 1)
    public static let colorCorePurple0 = UIColor(red: 0.949, green: 0.949, blue: 0.976, alpha: 1)
    public static let colorCoreBlue1100 = UIColor(red: 0.000, green: 0.129, blue: 0.220, alpha: 1)
    public static let colorCoreBlue1000 = UIColor(red: 0.039, green: 0.224, blue: 0.376, alpha: 1)
    public static let colorCoreBlue900 = UIColor(red: 0.047, green: 0.337, blue: 0.537, alpha: 1)
    public static let colorCoreBlue800 = UIColor(red: 0.067, green: 0.427, blue: 0.667, alpha: 1)
    public static let colorCoreBlue700 = UIColor(red: 0.125, green: 0.475, blue: 0.765, alpha: 1)
    public static let colorCoreBlue600 = UIColor(red: 0.169, green: 0.529, blue: 0.827, alpha: 1)
    public static let colorCoreBlue500 = UIColor(red: 0.220, green: 0.588, blue: 0.890, alpha: 1)
    public static let colorCoreBlue400 = UIColor(red: 0.337, green: 0.678, blue: 0.961, alpha: 1)
    public static let colorCoreBlue300 = UIColor(red: 0.631, green: 0.824, blue: 0.973, alpha: 1)
    public static let colorCoreBlue200 = UIColor(red: 0.780, green: 0.894, blue: 0.976, alpha: 1)
    public static let colorCoreBlue100 = UIColor(red: 0.863, green: 0.949, blue: 1.000, alpha: 1)
    public static let colorCoreBlue0 = UIColor(red: 0.914, green: 0.973, blue: 1.000, alpha: 1)
    public static let colorCoreAqua1100 = UIColor(red: 0.000, green: 0.157, blue: 0.220, alpha: 1)
    public static let colorCoreAqua1000 = UIColor(red: 0.031, green: 0.239, blue: 0.310, alpha: 1)
    public static let colorCoreAqua900 = UIColor(red: 0.012, green: 0.369, blue: 0.451, alpha: 1)
    public static let colorCoreAqua800 = UIColor(red: 0.059, green: 0.431, blue: 0.518, alpha: 1)
    public static let colorCoreAqua700 = UIColor(red: 0.043, green: 0.522, blue: 0.600, alpha: 1)
    public static let colorCoreAqua600 = UIColor(red: 0.027, green: 0.592, blue: 0.682, alpha: 1)
    public static let colorCoreAqua500 = UIColor(red: 0.090, green: 0.722, blue: 0.808, alpha: 1)
    public static let colorCoreAqua400 = UIColor(red: 0.200, green: 0.839, blue: 0.886, alpha: 1)
    public static let colorCoreAqua300 = UIColor(red: 0.463, green: 0.898, blue: 0.886, alpha: 1)
    public static let colorCoreAqua200 = UIColor(red: 0.647, green: 0.949, blue: 0.949, alpha: 1)
    public static let colorCoreAqua100 = UIColor(red: 0.773, green: 0.976, blue: 0.976, alpha: 1)
    public static let colorCoreAqua0 = UIColor(red: 0.851, green: 0.988, blue: 0.984, alpha: 1)
    public static let colorCoreTeal1100 = UIColor(red: 0.000, green: 0.145, blue: 0.157, alpha: 1)
    public static let colorCoreTeal1000 = UIColor(red: 0.031, green: 0.247, blue: 0.247, alpha: 1)
    public static let colorCoreTeal900 = UIColor(red: 0.008, green: 0.400, blue: 0.380, alpha: 1)
    public static let colorCoreTeal800 = UIColor(red: 0.024, green: 0.486, blue: 0.486, alpha: 1)
    public static let colorCoreTeal700 = UIColor(red: 0.043, green: 0.588, blue: 0.561, alpha: 1)
    public static let colorCoreTeal600 = UIColor(red: 0.000, green: 0.663, blue: 0.612, alpha: 1)
    public static let colorCoreTeal500 = UIColor(red: 0.031, green: 0.769, blue: 0.698, alpha: 1)
    public static let colorCoreTeal400 = UIColor(red: 0.141, green: 0.878, blue: 0.773, alpha: 1)
    public static let colorCoreTeal300 = UIColor(red: 0.490, green: 0.918, blue: 0.835, alpha: 1)
    public static let colorCoreTeal200 = UIColor(red: 0.702, green: 0.949, blue: 0.902, alpha: 1)
    public static let colorCoreTeal100 = UIColor(red: 0.804, green: 0.969, blue: 0.937, alpha: 1)
    public static let colorCoreTeal0 = UIColor(red: 0.898, green: 0.976, blue: 0.961, alpha: 1)
    public static let colorCoreGreen1100 = UIColor(red: 0.000, green: 0.169, blue: 0.125, alpha: 1)
    public static let colorCoreGreen1000 = UIColor(red: 0.031, green: 0.259, blue: 0.184, alpha: 1)
    public static let colorCoreGreen900 = UIColor(red: 0.000, green: 0.420, blue: 0.251, alpha: 1)
    public static let colorCoreGreen800 = UIColor(red: 0.000, green: 0.545, blue: 0.275, alpha: 1)
    public static let colorCoreGreen700 = UIColor(red: 0.047, green: 0.655, blue: 0.314, alpha: 1)
    public static let colorCoreGreen600 = UIColor(red: 0.169, green: 0.714, blue: 0.337, alpha: 1)
    public static let colorCoreGreen500 = UIColor(red: 0.349, green: 0.796, blue: 0.349, alpha: 1)
    public static let colorCoreGreen400 = UIColor(red: 0.459, green: 0.867, blue: 0.400, alpha: 1)
    public static let colorCoreGreen300 = UIColor(red: 0.596, green: 0.898, blue: 0.557, alpha: 1)
    public static let colorCoreGreen200 = UIColor(red: 0.761, green: 0.949, blue: 0.741, alpha: 1)
    public static let colorCoreGreen100 = UIColor(red: 0.843, green: 0.957, blue: 0.843, alpha: 1)
    public static let colorCoreGreen0 = UIColor(red: 0.922, green: 0.976, blue: 0.922, alpha: 1)
    public static let colorFontSuccess = colorCoreGreen1000
    public static let colorFontWarning = colorCoreOrange1000
    public static let colorFontDanger = colorCoreRed1000
    public static let colorFontTertiary = colorCoreNeutral800
    public static let colorFontSecondary = colorCoreNeutral900
    public static let colorFontPrimary = colorCoreNeutral1100
    public static let colorBrandSecondary = colorCorePurple700
    public static let colorBrandPrimary = colorCoreAqua700
    public static let colorBorderPrimary = colorCoreNeutral300
    public static let colorBackgroundInfo = colorCoreBlue0
    public static let colorBackgroundSuccess = colorCoreGreen0
    public static let colorBackgroundWarning = colorCoreOrange0
    public static let colorBackgroundDanger = colorCoreRed0
    public static let colorBackgroundTertiary = colorCoreNeutral200
    public static let colorBackgroundSecondary = colorCoreNeutral100
    public static let colorBackgroundPrimary = colorCoreNeutral0
    public static let colorFontInteractiveDisabled = colorFontTertiary
    public static let colorFontInteractiveActive = colorBrandSecondary
    public static let colorFontInteractiveHover = colorBrandPrimary
    public static let colorFontInteractive = colorBrandPrimary
    public static let colorBackgroundDisabled = colorBackgroundTertiary
}
"
`;
